# Experimental-Data-Digitalization

./: .env  .gitignore  Makefile  README.md  pyproject.toml
data/: SI-Image-Data Set.xlsx
data/nitrogen-adsorption-isotherms/: 10.1039_c5cc09935h_page_3_Li+@Zn-MOF-Crown_ads.txt  10.1039_c5cc09935h_page_3_Li+@Zn-MOF-Crown_des.txt  10.1039_c5cc09935h_page_3_Zn-MOF-Crown_ads.txt  10.1039_c5cc09935h_page_3_Zn-MOF-Crown_des.txt  acs.cgd.6b01265-si_page_10_NJU-Bai30_ads.txt  acs.cgd.6b01265-si_page_10_NJU-Bai30_des.txt  acs.cgd.6b01265-si_page_10_NJU-Bai31_ads.txt  acs.cgd.6b01265-si_page_10_NJU-Bai31_des.txt  acs.chemmater.5b03723-si_page_20-UAH-25-Ala-Boc(11)_ads.txt  acs.chemmater.5b03723-si_page_20-UAH-25-Ala-Boc(11)_des.txt  acs.chemmater.5b03723-si_page_23_UHM-25-Val-Boc(12)_ads.txt  acs.chemmater.5b03723-si_page_23_UHM-25-Val-Boc(12)_des.txt  acs.chemmater.5b03723-si_page_25_UHM-25-Leu-Boc (13)_ads.txt  acs.chemmater.5b03723-si_page_25_UHM-25-Leu-Boc (13)_des.txt  acs.chemmater.5b03723-si_page_27_UHM-25-Ala(14)_ads.txt  acs.chemmater.5b03723-si_page_27_UHM-25-Ala(14)_des.txt  acs.chemmater.5b03723-si_page_29_UHM-25-Val(15)_ads.txt  acs.chemmater.5b03723-si_page_29_UHM-25-Val(15)_des.txt  acs.chemmater.5b03723-si_page_31_UHM-25-Leu(16)_ads.txt  acs.chemmater.5b03723-si_page_31_UHM-25-Leu(16)_des.txt  acs.chemmater.5b03723-si_page_33_UHM-25-Pro(17)_ads.txt  acs.chemmater.5b03723-si_page_33_UHM-25-Pro(17)_des.txt  acs.chemmater.5b03723-si_page_36_UHM-25-Evans(18)_ads.txt  acs.chemmater.5b03723-si_page_36_UHM-25-Evans(18)_des.txt  acs.chemmater.5b03723_page_5_UHM-25-Val-Boc_ads.txt  acs.inorgchem.5b00194_page_3_ZJU-70a_ads.txt  (+394 more)
experimental_data_digitalization/: params.py  utils.py
frontend/: app.py
notebooks/: output_pymupdf.txt  output_pypdf.txt  pdfloader.ipynb  rag.ipynb
(+3 files in other folders)
