[tool.poetry]
name = "experimental-data-digitalization"
version = "0.1.0"
description = "Digitalize experimental data with image detection and classificcation of research papers"
authors = ["jerome roeser <jerome.roeser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
