[tool.poetry]
name = "experimental-data-digitalization"
version = "0.1.0"
description = "Digitalize experimental data with image detection and classificcation of research papers"
authors = ["jerome roeser <jerome.roeser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^5.0.1"
pillow = ">=7.1.0,<=11"
pandas = "^2.2.3"
numpy = "^2.1.2"
openpyxl = "^3.1.5"
pymupdf = "^1.24.12"
pytest = "^8.3.3"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
requests = "^2.32.3"
streamlit = "^1.39.0"
tiktoken = "^0.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
